# runir-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
.agents/skills/cpp/: SKILL.md
.agents/skills/python/: SKILL.md
.github/workflows/: ci_pytest.yml
docs/: AGENT.md  api.md  candidates.md  context.md  dumping.md  history.md  index.md  runir.ps.base.create_empty_policy.md  runir.ps.base.execute_policy.md  runir.ps.base.prove_policy.md  runir.ps.base.prove_sketch_policy.md  runir.ps.base.prove_termination.md  runir.ps.base.reformat_policy.md  runir.ps.ext.create_empty_module_program.md  runir.ps.ext.execute_module_program.md  runir.ps.ext.prove_module_program.md  runir.ps.ext.prove_termination.md  runir.ps.ext.reformat_module.md  runir.ps.ext.reformat_module_program.md  runir.ps.find_solution.md  runir.task_generation.md  runir.uns.create_empty_classifier.md  runir.uns.prove_classifier.md  runir.uns.reformat_classifier.md
docs/output/: runir.ps.base.counterexamples.md  runir.ps.ext.counterexamples.md  runir.ps.ext.prove_termination.md  runir.uns.prove_classifier.md
docs/tables/: index-tables.md  index.md  rendering.md  runir.ps.base.counterexamples.md  runir.ps.base.prove_termination.md  runir.ps.ext.counterexamples.md  runir.ps.ext.prove_termination.md  runir.ps.open_state.plan_trace.md  runir.uns.prove_classifier.md
docs/tables/dictionaries/: index.md  runir.ps.base.actions.md  runir.ps.base.atoms.md  runir.ps.base.features.md  runir.ps.base.rules.md  runir.ps.ext.actions.md  runir.ps.ext.atoms.md  runir.ps.ext.features.md  runir.ps.ext.memory.md  (+7 more)
src/pyrunir_mcp/: __init__.py  artifacts.py  callsite.py  candidates.py  config.py  context.py  counterexample_payloads.py  defaults.py  dumping.py  enums.py  feature_evidence.py  history.py  invoke.py  json_types.py  keys.py  paths.py  planning.py  proof.py  results.py  roles.py  server.py  tables.py  task_generation.py  validation.py
tests/: test_feature_evidence.py  test_find_solution.py  test_packaging.py  test_proof_traces.py  test_python_api.py  test_result_contracts.py  test_roles.py  test_server_output_paths.py  test_tables.py  test_task_generation.py  test_termination_dumping.py
tests/output/: test_classifier_termination.py  test_dictionaries.py  test_execute_run.py  test_execute_witness.py  test_plan_trace.py  test_policy_witness.py  test_proof_witness.py  test_run.py  test_solution_run.py  test_writer.py
tests/support/: artifacts.py
(+102 files in other folders)
