[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pyrunir-mcp"
version = "0.0.20"
description = "Stateful pyrunir validation API for planning-and-learning agents"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Dominik Drexler"},
]
dependencies = [
    "jinja2>=3",
    "pyrunir>=0.0.18,<0.1",
    "pytyr>=0.0.27,<0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "pyright>=1.1.411",
]


[tool.uv.sources]
pyrunir = { path = "../runir", editable = true }
pytyr = { path = "../tyr", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/pyrunir_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
