[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pyrunir-mcp"
version = "0.0.28"
description = "Stateful pyrunir validation API for planning-and-learning agents"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Dominik Drexler"},
]
dependencies = [
    "jinja2>=3",
    "pypddl>=1.0.24,<1.1",
    "pypddl-datasets>=0.0.7,<0.1",
    "pyrunir>=0.0.24,<0.1",
    "pytyr>=0.0.31,<0.1",
    "pyyggdrasil>=0.0.24,<0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "pyright>=1.1.411",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyrunir_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
